syntax = "proto3";

option go_package = "./;gravity_sdk_types_pipeline_event";

package gravity.sdk.types.pipeline_event;

message PipelineEvent {
  uint64 pipelineID = 1;
  uint64 sequence = 2;
  bytes payload = 3;
}
